{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "5c5fb867-5451-438b-beca-d09fc0cf1b61",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6bf9b8f5-5b28-4b9a-8986-191f2df77637",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AttackR1",
                    "type": "Button",
                    "id": "9938b65a-d5e3-4cfd-a460-1339ee0ffa4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackR2",
                    "type": "Button",
                    "id": "271c031e-9c87-4584-a72a-c6e672108744",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetLock",
                    "type": "Button",
                    "id": "e4558aa6-8c6d-4630-89b1-e3765b20134d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "See",
                    "type": "Value",
                    "id": "43446aba-603f-4e07-b424-1d29dbf7f512",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sneak",
                    "type": "Button",
                    "id": "8b3a67d1-cd74-4f00-8eac-9af342561898",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlockL1",
                    "type": "Button",
                    "id": "7b1cbf35-2f3e-49d7-98c2-393f4dabcda5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "344587ba-d781-4f95-900a-448171a0e6ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "842d8b52-ca8a-4111-9fc8-577b0bb8ce30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "69db9a4b-c629-431f-ba43-f4bdec45d8fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "b9eed494-a07d-49ea-b470-bd1745d1a468",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5a220dbe-4679-4382-8bc5-6b6f6837241c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "AttackR1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36ae77cf-172a-49c9-9fbb-633393969499",
                    "path": "<DualSenseGamepadHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackR1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "bcd34401-4afb-4ad9-9bd1-e39a6c99834f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "82482f3c-ee4c-4858-aa9a-8d2b885a5908",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff50c824-0d6e-4aef-a1a2-30c26dac3f96",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "33800002-6666-4c03-8e50-dbcb0686eaa9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c21b0396-e509-4905-a4c0-2b948820cb98",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "eab8daac-5a6c-45c3-9cf0-7dff34bda80a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9a905fd7-4c72-420f-a445-23677aefd84b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9817bf88-969e-4d3d-9bf6-ae674c9c17af",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b78c52fb-410c-4c31-bdcb-dbbf5e0345f2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b18d927-a4b3-48df-92de-9ae911bd3454",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left Stick",
                    "id": "01a80981-8474-4891-a826-31e70bc426d3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6ed95d6b-c5a1-4418-a7fe-b3398dcfdb24",
                    "path": "<DualSenseGamepadHID>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fc05d86d-a4ed-40c8-a098-b65d3e03f8c2",
                    "path": "<DualSenseGamepadHID>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1f79fd5b-8367-4d41-b411-d5b950e40bbc",
                    "path": "<DualSenseGamepadHID>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "859d7b48-96f2-403b-8189-45a15557826a",
                    "path": "<DualSenseGamepadHID>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "09814bcb-2d66-4187-a0d7-66ceaa05c4d7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "AttackR2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b35ce7c-28ea-4562-bc1c-c84badd0cced",
                    "path": "<DualSenseGamepadHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackR2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Right Stick",
                    "id": "9e68bf1c-58de-4b90-bef3-2d364b2d1ba5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "See",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9eb1d52b-75c7-4134-a418-7d11daad5fa1",
                    "path": "<DualSenseGamepadHID>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "See",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "16d0fa99-9dbe-43cd-99c0-64f82b67ec67",
                    "path": "<DualSenseGamepadHID>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "See",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d531f0a3-03d3-49a0-a412-8fed605464de",
                    "path": "<DualSenseGamepadHID>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "See",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "192460c5-6a7d-42ec-8bf4-29ebb5d8bb4a",
                    "path": "<DualSenseGamepadHID>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "See",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3d3f55ae-51f2-4baf-90b1-229107cd0deb",
                    "path": "<DualSenseGamepadHID>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TargetLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "778496a4-93a9-4c66-a5e5-f871b121098f",
                    "path": "<DualSenseGamepadHID>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Sneak",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "543a3ff9-a6a5-439b-aa36-4fc00e14b970",
                    "path": "<DualSenseGamepadHID>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "BlockL1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1be9e911-c032-477c-bed1-496aa4899d26",
                    "path": "<DualSenseGamepadHID>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abe82e72-bc9d-42a3-a753-985c5d077449",
                    "path": "<DualSenseGamepadHID>/buttonEast",
                    "interactions": "Hold(duration=0.3)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ab5bcf8-64ef-41ca-882e-eb38e935654d",
                    "path": "<DualSenseGamepadHID>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75a37f12-54ce-4c08-bacd-019fffcb73b5",
                    "path": "<DualSenseGamepadHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse & Keyboard",
            "bindingGroup": "Mouse & Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}